# beetl

./: .dockerignore  .gitignore  .pylintrc  .readthedocs.yaml  Dockerfile  README.md  benchmark.py  changenotes.md  compare.py  conf.py  doc-requirements.txt  entrypoint.py  index.rst  make_schema.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run-tests.ps1  setup.py  test.py  test.secrets.template.yaml  test.yaml  tests.py
.devcontainer/: devcontainer.json  post-create.sh
.github/ISSUE_TEMPLATE/: transformer-request.md
.github/workflows/: publish-docs.yml  publish.yml
_build/doctrees/: environment.pickle  index.doctree
_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docker/: Dockerfile  entrypoint.py
docs/: diff.md  examples.md  getting-started.md  index.md
docs/.vitepress/: config.mts
docs/examples/: nutanix-to-sqlserver.md  sqlserver-to-itop.md
docs/getting-started/: change-notes.md  columns.md  diff-tracking.md  flow.md
docs/schemas/: configuration.md
docs/source/: background.rst  conf.py  index.rst  readme.rst  structure.rst  todo.rst
docs/sources/: csv.md  excel.md  faker.md  itop.md  mongodb.md  mysql.md  postgres.md  rest.md  sqlserver.md  static.md  xml.md
docs/transformers/: frames.md  int.md  itop.md  misc.md  regex.md  strings.md  structs.md  using-transformers.md
kubernetes/: configmap.yaml  cronjob.yaml
src/beetl/: __version__.py  beetl.py  comparison_result.py  config.py  result.py  sources.py  transformers.py
tests/: general.py  static-static.yaml  test_functions.py  test_sources.py  test_sources_basic.py
tests/benchmark_testing/: test_benchmark_postgresql.py
tests/benchmarks/: data.py  itop.py  mssql.py  mysql.py  rest.py
tests/configs/: mysql-mysql.yaml
tests/configurations/: __init__.py  excel.py  faker.py  itop.py  mongodb.py  mysql.py  postgresql.py  rest.py  sqlserver.py  static.py  xml.py
tests/distribution_testing/: __init__.py  run_distribution_test.py  test_distribution.py
tests/fake-data/: insert_fake_data.py
tests/helpers/: __init__.py  manual_result.py  mysql_testcontainer.py  secrets.py  (+3 more)
(+207 files in other folders)
